--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,13 @@
 html {
     font-size: 10px; /* px quiere decir 'píxeles': el tamaño de la fuente base es ahora de 10 píxeles de altura */
     font-family: "Open Sans", sans-serif; /* Este debe ser el resto del resultado que obtuviste de Google fonts */
-    background-color: #00539f;
+    background-color: #252525;
 }
 
 body {
     width: 600px;
     margin: 0 auto;
-    background-color: #ff9500;
+    background-color: #88918c;
     padding: 0 20px 20px 20px;
     border: 5px solid black;
 }
