--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ html {
 body {
     width: 600px;
     margin: 0 auto;
-    background-color: #88918c;
+    background-color: #a0a0a0;
     padding: 0 20px 20px 20px;
     border: 5px solid black;
 }
